--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -1,5 +1,6 @@
 .parts__container{
     display: flex;
+    flex-wrap: wrap;
     height: 90vh;
 }
 
@@ -16,6 +17,7 @@
     align-items: center;
     /* justify-content: space-between; */
     height: 100%;
+    background-color: #f8f8f8;
 }
 
 .messages__container > .chat__header{
